--- a/Har_Ghar_Khaana/admin/package.json
+++ b/Har_Ghar_Khaana/admin/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
     "axios": "^1.7.9",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.4"
