created user auth system in the backend

--- a/Har_Ghar_Khaana/BackEnd/.env
+++ b/Har_Ghar_Khaana/BackEnd/.env
@@ -1,4 +1,1 @@
-username="lavkushsolanki"
-password="Lavkush12082004@#"
-mongodb+srv://lavkushsolanki:Lavkush12082004@#@clusterfood.ozh5t.mongodb.net/?retryWrites=true&w=majority&appName=ClusterFood
-
+JWT_SECRET="random#secretkk"
